--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "license": "MIT",
+  "license": "CC BY-NC-SA 4.0",
   "type": "module",
   "scripts": {
     "postinstall": "playwright install",
