--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
   "license": "LGPL-3.0-or-later",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "genezio": "^0.7.2",
     "langchain": "^0.1.2",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.3"
