--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": "DeFi Builder thedefibuilder@gmail.com",
-  "license": "LGPL-3.0-or-later",
+  "license": "CC BY-NC-SA 4.0",
   "dependencies": {
     "dotenv": "^16.3.1",
     "genezio": "^0.7.2",
