--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "@langchain/openai": "^0.0.11",
     "dotenv": "^16.3.1",
     "genezio": "^0.7.2",
+    "mongoose": "^8.0.4",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.3"
   },
