--- a/front-end/package.json
+++ b/front-end/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "starknet": "^5.24.3",
     "starknetkit": "^1.0.29",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
@@ -71,3 +72,4 @@
     "src/**/*.{ts,tsx}": "npx eslint"
   }
 }
+
